--- a/crates/higgs/Cargo.toml
+++ b/crates/higgs/Cargo.toml
@@ -10,14 +10,14 @@ repository = "https://github.com/voxelphile/higgs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-voxels = { path = "../../../voxels" }
+higgs_common = { path = "../higgs_common" }
 left-right = "*"
 dashmap = "*"
-nalgebra = { version = "*", features = ["serde-serialize"] }
 tokio = { version = "*", features = ["full"] }
 quinn = "*"
 bincode = "*"
 serde = { version = "*", features = ["derive"] }
 uuid = { version = "*", features = ["v4", "serde"] }
 futures = "*"
+google-cloud-storage = "*"
+game_common = { path = "../../../game_common/" }
